--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,12 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "baseUrl": "src",
+    "paths": {
+      "@/*": [
+        "*"
+      ],
+    },
   },
   "include": [
     "src"
